--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,103 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <script src="/javascripts/navigation.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  {{!-- <script>
+    (function () {
+      var body, container, hearts, spades, isTouch;
 
+      body = $("body");
+      container = $("<div>");
+      hearts = $("<div>");
+      spades = $("<div>");
+
+      TweenMax.set(body, {
+        css: {
+          width: 258,
+          height: 401,
+          transformStyle: "preserve-3d",
+          perspective: 1000,
+          perspectiveOrigin: "0% 0% 0px",
+          backgroundColor: "white",
+        }
+      });
+
+      TweenMax.set(container, {
+        css: {
+          transformStyle: "preserve-3d",
+          z: 0
+        }
+      });
+
+      TweenMax.set(hearts, {
+        css: {
+          backgroundImage: 'url("https://iili.io/dCN2QKF.png")'
+        }
+      });
+
+      TweenMax.set(spades, {
+        css: {
+          backgroundImage: 'url("https://iili.io/dCN1qDx.png")',
+          rotationY: -180
+        }
+      });
+
+      TweenMax.set([spades], {
+        css: {
+          width: 1050,
+          height: 600,
+          zoom: "50%",
+          backfaceVisibility: "hidden",
+          position: "absolute"
+        }
+      });
+
+      TweenMax.set([hearts], {
+        css: {
+          width: 1200,
+          height: 640,
+          zoom: "50%",
+          backfaceVisibility: "hidden",
+          position: "absolute"
+        }
+      });
+
+      container.appendTo(body);
+      hearts.appendTo(container);
+      spades.appendTo(container);
+      container.appendTo(document.getElementById("bencard"))
+      isTouch = "touchstart" in document.documentElement;
+
+      enableUI();
+
+      function onMouseDown(e) {
+        TweenMax.to(container, 2, {
+          css: { rotationY: "+=180" },
+          onComplete: enableUI,
+          ease: Power2.easeInOut
+        });
+        TweenMax.to(container, 1, {
+          css: { z: "-=100" },
+          yoyo: true,
+          repeat: 1,
+          ease: Power2.easeIn
+        });
+      }
+
+      function enableUI() {
+        if (isTouch) {
+          container.one("touchend", onMouseDown);
+        } else {
+          container.one("click", onMouseDown);
+        }
+      }
+    })();
+
+  </script> --}}
 </head>
 
-<body class="container" style="caret-color: transparent;">
+<body  class="container" style="caret-color: transparent;">
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -26,15 +119,16 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li onclick="lift()" class="nav-item"><a id="liftbutton" class="nav-link active" aria-current="page">LiftKC</a></li>
+        <li onclick="lift()" class="nav-item"><a id="liftbutton" class="nav-link active" aria-current="page">LiftKC</a>
+        </li>
         <li onclick="benny()" class="nav-item"><a id="bennybutton" class="nav-link">BennyBombs</a></li>
         <li onclick="yana()" class="nav-item"><a id="yanabutton" class="nav-link">Yana Bear</a></li>
-        <li onclick="pro()" class="nav-item"><a id="probutton"class="nav-link">Pro Tour</a></li>
-        <li onclick="follow()" class="nav-item"><a id="followbutton"class="nav-link">Contact / Follow</a></li>
+        <li onclick="pro()" class="nav-item"><a id="probutton" class="nav-link">Pro Tour</a></li>
+        <li onclick="follow()" class="nav-item"><a id="followbutton" class="nav-link">Contact / Follow</a></li>
       </ul>
     </header>
   </div>
-  <div id="lift" >
+  <div id="lift">
 
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 
@@ -192,7 +286,53 @@
   <script>load_gb_widget({ url: "https://app.facilityally.com/book/liftkc/all-touring-pros/all", width: "auto" });</script>
   --}}
   <div id="benny" style="display: none">
-    Benny Bombs
+    {{!-- <div class="row row-cols-1 row-cols-md-3 mb-3 text-center"> --}}
+      <div class="col reveal">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div
+            style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
+            class="card-header py-3 text-bg-primary border-primary">
+            <h4 style="font-weight: 700" class="my-0">Lessons with Benny Bombs </h4>
+            <h7 style="font-weight: 700" class="my-0">Private / Doubles / Groups</h7>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$90<small class="text-body-secondary fw-light">/hr</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style="font-weight: bold">DUPR: 6.5 (Highest) </li>
+              <li>2024 NY APP Men's Doubles Finalist</li>
+              <li>2023 MLP Challenger Champion (Dallas)</li>
+              <li>2022 Top 20 Men's Doubles</li>
+            </ul>
+            <button
+              onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'"
+              type="button" class="w-100 btn btn-lg btn-primary">Book Now</button>
+          </div>
+        </div>
+      </div>
+      
+      
+    {{!-- </div> --}}
+    <div class="col reveal">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div
+            style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
+            class="card-header py-3 text-bg-primary border-primary">
+            <h4 style="font-weight: 700" class="my-0">Benny Bombs Kids Camps!! </h4>
+            <h7 style="font-weight: 700" class="my-0">Comming Soon!</h7>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">FREE</h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style="font-weight: bold">Beginner / Advanced</li>
+              <li>Focus on athleticism</li>
+              <li>Focus confidence and creativity! </li>
+            </ul>
+            <button
+              onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'"
+              type="button" class="w-100 btn btn-lg btn-primary">Comming Soon!</button>
+          </div>
+        </div>
+      </div>
   </div>
   <div id="yana" style="display: none">
     Yana Bear
@@ -201,7 +341,9 @@
     Pro Tour
   </div>
   <div id="follow" style="display: none">
-    Follow / Contact
+    <div id='bencard'>
+      ben
+    </div>
   </div>
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -220,6 +362,7 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
   <script src="../public/javascripts/navigation.js"></script>
+
 </body>
 
 </html>
