--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,8 @@
   <script src="/javascripts/navigation.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-  {{!-- <script>
+  {{!--
+  <script>
     (function () {
       var body, container, hearts, spades, isTouch;
 
@@ -104,7 +105,7 @@
   </script> --}}
 </head>
 
-<body  class="container" style="caret-color: transparent;">
+<body class="container" style="caret-color: transparent;">
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -140,7 +141,7 @@
         </div>
       </div>
       <div class="col reveal">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3" style="height: 400px; box-shadow: 10px 10px 5px lightgray">
           <div
             style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
             class="card-header py-3 text-bg-primary border-primary">
@@ -163,7 +164,7 @@
         </div>
       </div>
       <div class="col reveal">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 " style="height: 400px; box-shadow: 10px 10px 5px lightgray">
           <div style="min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/tableau.jpg');
  background-size: cover" class="card-header py-3">
             <h4 style="font-weight: 700; color: white" class="my-0">Everything
@@ -192,29 +193,34 @@
 
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col reveal">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 " style="height: 500px; box-shadow: 10px 10px 5px lightgray">
           <div class="card-header py-3">
             <h1 class="txt-eff">
               <span class="text-wrapper">
                 <span class="line line1"></span>
-                <span style="font-weight: bold; color: #3f7bc7" class="letters">PORTFOLIO</span>
+                <span style="font-weight: bold; color: #3f7bc7" class="letters">EXPERIENCE</span>
               </span>
             </h1>
           </div>
           <div class="card-body">
             <h5>
+              <img height="40px" src="../images/nike.png" alt="Rounded circle Image" class="rounded-circle" />
               Nike, Inc.
             </h5>
             <p>
               Data Analytics Manager and Tableau Server Administrator
             </p>
             <h5>
+              <img height="40px" src="../images/mlp.jpg" alt="Rounded circle Image" class="rounded-circle" />
+
               Major League Pickleball
             </h5>
             <p>
               React Application (Javascript, React, HTML, CSS, Heroku, Go Daddy)
             </p>
             <h5>
+              <img height="40px" src="../images/aci.png" alt="Rounded circle Image" class="rounded-circle" />
+
               American Century Investments
             </h5>
             <p>
@@ -225,7 +231,7 @@
         </div>
       </div>
       <div class="col reveal">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 " style="height: 500px; box-shadow: 10px 10px 5px lightgray">
           <div class="card-header py-3">
             <h1 class="txt-eff">
               <span class="text-wrapper">
@@ -254,7 +260,7 @@
       </div>
       <div class="col reveal">
 
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 " style="height: 500px; box-shadow: 10px 10px 5px lightgray">
           <div class="card-header py-3">
             <h1 class="txt-eff">
               <span class="text-wrapper">
@@ -309,30 +315,31 @@
           </div>
         </div>
       </div>
-      
-      
-    {{!-- </div> --}}
+
+
+      {{!--
+    </div> --}}
     <div class="col reveal">
-        <div class="card mb-4 rounded-3 shadow-sm">
-          <div
-            style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
-            class="card-header py-3 text-bg-primary border-primary">
-            <h4 style="font-weight: 700" class="my-0">Benny Bombs Kids Camps!! </h4>
-            <h7 style="font-weight: 700" class="my-0">Comming Soon!</h7>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">FREE</h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li style="font-weight: bold">Beginner / Advanced</li>
-              <li>Focus on athleticism</li>
-              <li>Focus confidence and creativity! </li>
-            </ul>
-            <button
-              onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'"
-              type="button" class="w-100 btn btn-lg btn-primary">Comming Soon!</button>
-          </div>
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div
+          style=" min-height: 75px; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9) ), url('/images/react2.png'); background-size: cover"
+          class="card-header py-3 text-bg-primary border-primary">
+          <h4 style="font-weight: 700" class="my-0">Benny Bombs Kids Camps!! </h4>
+          <h7 style="font-weight: 700" class="my-0">Comming Soon!</h7>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">FREE</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li style="font-weight: bold">Beginner / Advanced</li>
+            <li>Focus on athleticism</li>
+            <li>Focus confidence and creativity! </li>
+          </ul>
+          <button
+            onclick="location.href = 'https://www.liftkc.online/booking-calendar/full-stack-development-consulting'"
+            type="button" class="w-100 btn btn-lg btn-primary">Comming Soon!</button>
         </div>
       </div>
+    </div>
   </div>
   <div id="yana" style="display: none">
     Yana Bear
