update nav images.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -120,12 +120,11 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li onclick="lift()" class="nav-item"><a id="liftbutton" class="nav-link active" aria-current="page">LiftKC</a>
-        </li>
-        <li onclick="benny()" class="nav-item"><a id="bennybutton" class="nav-link">BennyBombs</a></li>
-        <li onclick="yana()" class="nav-item"><a id="yanabutton" class="nav-link">Yana Bear</a></li>
-        <li onclick="pro()" class="nav-item"><a id="probutton" class="nav-link">Pro Tour</a></li>
-        <li onclick="follow()" class="nav-item"><a id="followbutton" class="nav-link">Contact / Follow</a></li>
+        <li style="width: 130px" onclick="lift()" class="nav-item "><a id="liftbutton" class="nav-link active"> <img height="50px" src="../images/liftwhite.png" alt="Lift LLC"  /></a></li>
+        <li style="width: 130px" onclick="benny()" class="nav-item"><a id="bennybutton" class=" nav-link"> <img height="50px" src="../images/bennybombstxt.png" alt="Benny Bombs"  /></a></li>
+        <li style="width: 130px" onclick="yana()" class="nav-item"><a id="yanabutton" class="nav-link"> <img height="50px" src="../images/yanabear.png" alt="Yana Bear"  /></a></li>
+        <li style="width: 130px" onclick="pro()" class="nav-item"><a id="probutton" class="nav-link"><img height="50px" src="../images/protour.png" alt="Pro Tour"  /></a></li>
+        {{!-- <li  onclick="follow()" class="nav-item"><a id="followbutton" class="nav-link">Contact / Follow</a></li> --}}
       </ul>
     </header>
   </div>
