--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,131 +3,49 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bootstrap demo</title>
+  <title>Lift KC</title>
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/stylesheets/flat.min.css" />
+
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <script src="/javascripts/navigation.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-  {{!--
-  <script>
-    (function () {
-      var body, container, hearts, spades, isTouch;
-
-      body = $("body");
-      container = $("<div>");
-      hearts = $("<div>");
-      spades = $("<div>");
-
-      TweenMax.set(body, {
-        css: {
-          width: 258,
-          height: 401,
-          transformStyle: "preserve-3d",
-          perspective: 1000,
-          perspectiveOrigin: "0% 0% 0px",
-          backgroundColor: "white",
-        }
-      });
-
-      TweenMax.set(container, {
-        css: {
-          transformStyle: "preserve-3d",
-          z: 0
-        }
-      });
-
-      TweenMax.set(hearts, {
-        css: {
-          backgroundImage: 'url("https://iili.io/dCN2QKF.png")'
-        }
-      });
-
-      TweenMax.set(spades, {
-        css: {
-          backgroundImage: 'url("https://iili.io/dCN1qDx.png")',
-          rotationY: -180
-        }
-      });
-
-      TweenMax.set([spades], {
-        css: {
-          width: 1050,
-          height: 600,
-          zoom: "50%",
-          backfaceVisibility: "hidden",
-          position: "absolute"
-        }
-      });
-
-      TweenMax.set([hearts], {
-        css: {
-          width: 1200,
-          height: 640,
-          zoom: "50%",
-          backfaceVisibility: "hidden",
-          position: "absolute"
-        }
-      });
-
-      container.appendTo(body);
-      hearts.appendTo(container);
-      spades.appendTo(container);
-      container.appendTo(document.getElementById("bencard"))
-      isTouch = "touchstart" in document.documentElement;
-
-      enableUI();
-
-      function onMouseDown(e) {
-        TweenMax.to(container, 2, {
-          css: { rotationY: "+=180" },
-          onComplete: enableUI,
-          ease: Power2.easeInOut
-        });
-        TweenMax.to(container, 1, {
-          css: { z: "-=100" },
-          yoyo: true,
-          repeat: 1,
-          ease: Power2.easeIn
-        });
-      }
-
-      function enableUI() {
-        if (isTouch) {
-          container.one("touchend", onMouseDown);
-        } else {
-          container.one("click", onMouseDown);
-        }
-      }
-    })();
-
-  </script> --}}
 </head>
 
-<body class="container" style="caret-color: transparent;">
-  <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-        <div style="font-weight: bold">
-          <span class="fs-4"><img width="100px" src="../images/NewLiftSVG.svg" alt="" /></span>
-          <div></div>
-          MISSION | PROVIDE LIFT
-        </div>
-      </a>
+<body >
+  {{!-- <nav class="navbar navbar-expand-lg sticky-top " style="z-index: 999">
+    <div class="container-fluid" style="z-index: 999">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <button style="height: 50px; margin: 2px" type="button" class="btn btn-info" id="liftbutton">
+            <a class="nav-link active" aria-current="page" href="/"><img height="25px" src="../images/liftwhite.png"
+                alt="Lift LLC" /></a>
+          </button>
+          <button style="height: 50px; margin: 2px" type="button" class="btn " id="bennybutton">
+            <a class="nav-link" href="/bennybombs"><img height="25px" src="../images/bennybombstxt.png" alt="Benny Bombs" /></a>
+          </button>
+          <button style="height: 50px; margin: 2px" type="button" class="btn " id="yanabutton">
 
-      <ul class="nav nav-pills">
-        <li style="width: 130px" onclick="lift()" class="nav-item "><a id="liftbutton" class="nav-link active"> <img height="50px" src="../images/liftwhite.png" alt="Lift LLC"  /></a></li>
-        <li style="width: 130px" onclick="benny()" class="nav-item"><a id="bennybutton" class=" nav-link"> <img height="50px" src="../images/bennybombstxt.png" alt="Benny Bombs"  /></a></li>
-        <li style="width: 130px" onclick="yana()" class="nav-item"><a id="yanabutton" class="nav-link"> <img height="50px" src="../images/yanabear.png" alt="Yana Bear"  /></a></li>
-        <li style="width: 130px" onclick="pro()" class="nav-item"><a id="probutton" class="nav-link"><img height="50px" src="../images/protour.png" alt="Pro Tour"  /></a></li>
-        {{!-- <li  onclick="follow()" class="nav-item"><a id="followbutton" class="nav-link">Contact / Follow</a></li> --}}
-      </ul>
-    </header>
-  </div>
+            <a class="nav-link" href="/yanabear"><img height="25px" src="../images/yanabear.png" alt="Yana Bear" /></a>
+          </button>
+          <button style="height: 50px; margin: 2px" type="button" class="btn " id="probutton">
+
+            <a class="nav-link" href="/protour"><img height="25px" src="../images/protour.png"
+                alt="Pro Tour" /></a>
+          </button>
+
+        </div>
+      </div>
+    </div>
+  </nav> --}}
+
   <div id="lift">
 
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
