--- a/views/bennybombs.hbs
+++ b/views/bennybombs.hbs
@@ -89,52 +89,55 @@
             </div>
           </div>
         </div>
+        
       </div>
     </section>
-    <div  class="container px-4 py-5" id="custom-cards">
+    <section>
+      <div class="container px-4 py-5" id="custom-cards">
 
-      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url('');">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">EXPLOSIVE Sessions </h3>
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4"
+              style="background-image: url('');box-shadow: 10px 10px 5px lightgray">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">EXPLOSIVE Sessions </h3>
+
+              </div>
+              <img style="width: 100%" src="./assets2/images/hubbanner.jpg" alt="Hero Image">
 
             </div>
-            <img style="width: 100%" src="./assets2/images/hubbanner.jpg" alt="Hero Image">
 
           </div>
 
-        </div>
-
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-size: contain; background-image: url('');">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IMPOWERING Lunches</h3>
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4"
+              style="background-size: contain; background-image: url('');box-shadow: 10px 10px 5px lightgray">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IMPOWERING Lunches</h3>
 
 
-            </div>
-            <img style="width: 100%" src="./assets2/images/fundamismbanner.jpg" alt="Hero Image">
-
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-size: contain;background-image: url('');">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">FEARLESS Training </h3>
-
+              </div>
+              <img style="width: 100%" src="./assets2/images/fundamismbanner.jpg" alt="Hero Image">
 
             </div>
-            <img style="width: 100%" src="./assets2/images/crushbanner.jpg" alt="Hero Image">
-
           </div>
 
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 "
+              style="background-size: contain;background-image: url('');box-shadow: 10px 10px 5px lightgray">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">FEARLESS Training </h3>
+
+
+              </div>
+              <img style="width: 100%" src="./assets2/images/crushbanner.jpg" alt="Hero Image">
+
+            </div>
+
+          </div>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 
   <!-- Initial  Javascript -->
