--- a/views/yanabear.hbs
+++ b/views/yanabear.hbs
@@ -1,129 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Hero 5</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
- 
-    <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets2/images/favicon.png">
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"/>
-    <!-- fontAwesome -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Main Css -->
-    <link rel="stylesheet" href="./assets2/css/style.css" />
-      <link rel="stylesheet" href="/stylesheets/flat.min.css" />
 
-    <!-- animation Css -->
-    <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
-    <!-- Responsive css -->
-    <link rel="stylesheet" href="./assets2/css/responsive.css" />
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Space Parallax Scrolling</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      min-height: 100vh;
+      background: linear-gradient(#2b1055, #7597de);
+      overflow-x: hidden;
+    }
+
+    header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 30px 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10000;
+    }
+
+    header .logo {
+      color: #fff;
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    header ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    header ul li {
+      list-style: none;
+      margin-left: 20px;
+    }
+
+    header ul li a {
+      text-decoration: none;
+      padding: 6px 15px;
+      color: #fff;
+      border-radius: 20px;
+    }
+
+    header ul li a:hover,
+    header ul li a.active {
+      background: #fff;
+      color: #2b1055;
+    }
+
+    section {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      padding: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    section::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      background: linear-gradient(to top, #1c0522, transparent);
+      z-index: 1000;
+    }
+
+    section img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+    }
+
+    section img#moon {
+      mix-blend-mode: screen;
+    }
+
+    section img#mountains_front {
+      z-index: 10;
+    }
+
+    #text {
+      position: absolute;
+      right: -350px;
+      color: #fff;
+      white-space: nowrap;
+      font-size: 7.5vw;
+      z-index: 9;
+    }
+
+    #btn {
+      text-decoration: none;
+      display: inline-block;
+      padding: 8px 30px;
+      border-radius: 40px;
+      background: #fff;
+      color: #2b1055;
+      font-size: 1.5em;
+      z-index: 9;
+      transform: translateY(100px);
+    }
+
+    .sec {
+      position: relative;
+      padding: 100px;
+      background: #1c0522;
+    }
+
+    .sec h2 {
+      font-size: 3.5em;
+      margin-bottom: 10px;
+      color: #fff;
+    }
+
+    .sec p {
+      font-size: 1em;
+      color: #fff;
+    }
+  </style>
+
 </head>
 
 <body>
- <nav class="navbar navbar-expand-lg sticky-top " style="background-color: white">
-    <div class="container-fluid" style="z-index: 999">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <button style="height: 50px; margin: 2px" type="button" class="btn" id="liftbutton">
-            <a class="nav-link active" aria-current="page" href="/"><img height="25px" src="../images/liftwhite.png"
-                alt="Lift LLC" /></a>
-          </button>
-          <button style="height: 50px; margin: 2px" type="button" class="btn " id="bennybutton">
-            <a class="nav-link" href="/bennybombs"><img height="25px" src="../images/bennybombstxt.png" alt="Benny Bombs" /></a>
-          </button>
-          <button style="height: 50px; margin: 2px" type="button" class="btn btn-warning" id="yanabutton">
+  <!-- partial:index.partial.html -->
+  <header>
+    <a href="#" class="logo">Logo</a>
+    <ul>
+      <li><a href="#" >Lift LLC</a></li>
+      <li><a href="/pickleball" >Benny Bombs</a></li>
+      <li><a href="/yanabear" class="active">Yana Bear</a></li>
+      <li><a href="#">Pro Tour</a></li>
+    </ul>
+  </header>
 
-            <a class="nav-link" href="/yanabear"><img height="25px" src="../images/yanabear.png" alt="Yana Bear" /></a>
-          </button>
-          <button style="height: 50px; margin: 2px" type="button" class="btn " id="probutton">
+  <section>
+    <img src="http://codingstella.com/wp-content/uploads/2024/01/download-4.png" id="stars">
+    <img src="http://codingstella.com/wp-content/uploads/2024/01/download-5.png" id="moon">
+    <img src="http://codingstella.com/wp-content/uploads/2024/01/download-6.png" id="mountains_behind">
+    <h2 id="text">PLAY  &nbsp;&nbsp;  FEARLESS</h2>
+    <a href="#sec" id="btn">Explore</a>
+    <img src="http://codingstella.com/wp-content/uploads/2024/01/download-7.png" id="mountains_front">
+  </section>
 
-            <a class="nav-link" href="/protour"><img height="25px" src="../images/protour.png"
-                alt="Pro Tour" /></a>
-          </button>
+  <div class="sec" id="sec">
+    <h2>Parallax Scrolling Effects</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      <br><br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </p>
+  </div>
+  <script>
+    // Get references to the elements
+    const stars = document.getElementById('stars');
+    const moon = document.getElementById('moon');
+    const mountains_behind = document.getElementById('mountains_behind');
+    const text = document.getElementById('text');
+    const btn = document.getElementById('btn');
+    const mountains_front = document.getElementById('mountains_front');
+    const header = document.querySelector('header');
 
-        </div>
-      </div>
-    </div>
-  </nav>
+    // Add scroll event listener
+    window.addEventListener('scroll', function () {
+      // Get the current scroll position
+      let value = window.scrollY;
 
-    <main>
-        <!-- hero section start -->
-        <section class="d2c_hero d-flex align-items-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 d-flex align-items-center order-2 order-md-1">
-                        <div class="d2c_hero_content">
-                            <h2 class="d2c_hero_title">Get more customers with Inside Sales</h2>
-                            <p class="d2c_hero_text">Eliminate routine operational activities for SDR and Seller so they can focus on approaching leads quickly and building great sales.</p>
+      // Update element styles based on scroll position
+      stars.style.left = value * 0.25 + 'px';
+      moon.style.top = value * 1.05 + 'px';
+      mountains_behind.style.top = value * 0.5 + 'px';
+      mountains_front.style.top = value * 0 + 'px';
+      text.style.marginRight = value * 10 + 'px';
+      text.style.marginTop = value * 1.5 + 'px';
+      btn.style.marginTop = value * 1.5 + 'px';
+      header.style.top = value * 0.5 + 'px';
+    });
 
-                            <div class="d2c_hero_btn">
-                                <a href="#" class="btn d2c_primary_btn"><span>Get Started</span></a>
-                                <a href="#" class="btn d2c_secondary_btn"><span>Learn More</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-end order-1">
-                        <div class="d2c_hero_img ">
-                            <img class="w-100 cssanimation hu__hu__" src="./assets2/images/hero-img.png" alt="Hero Image">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="d2c_hero d-flex align-items-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 d-flex align-items-center order-2 order-md-1">
-                        <div class="d2c_hero_content">
-                            <h2 class="d2c_hero_title">Get more customers with Inside Sales</h2>
-                            <p class="d2c_hero_text">Eliminate routine operational activities for SDR and Seller so they can focus on approaching leads quickly and building great sales.</p>
 
-                            <div class="d2c_hero_btn">
-                                <a href="#" class="btn d2c_primary_btn"><span>Get Started</span></a>
-                                <a href="#" class="btn d2c_secondary_btn"><span>Learn More</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-end order-1">
-                        <div class="d2c_hero_img ">
-                            <img class="w-100 cssanimation hu__hu__" src="./assets2/images/hero-img.png" alt="Hero Image">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- hero section end -->
-    </main>
+  </script>
 
-    <!-- Initial  Javascript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="./lib/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-
-    <!-- 
-      KIT Name: 10+ Hero Section – Bootstrap Bundle
-      Product URL: https://www.designtocodes.com/product/10-hero-section-bootstrap-bundle/
-      Product Description: The Hero section kit is made of all the basic elements you need to create a stunning website, from the start. 
-      Author: designtocodes.com
-      Author URI: https://www.designtocodes.com/
-    -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <script src="../public/javascripts/navigation.js"></script>
 
 </body>
+
 </html>
